Fix Java 8 compatability break from upstream